--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,7 @@
     <main>
 
         <div class="container">
+            <!--buttons for email and phone contact -->
             <h1 class="center-align">Contact Me</h1>
             <div class="row">
                 <form class="center-align col s12" action="mailto:c.etges86@gmail.com">
@@ -59,55 +60,52 @@
                         <i class="material-icons left">email</i>
                     </button>
                     
-                    <button class="btn waves-effect waves-light z-depth-4">Call Me - (303) 518 - 2933
+                    <button class="btn waves-effect waves-light z-depth-4 disabled">Call Me - (303) 518 - 2933
                         <i class="material-icons left">local_phone</i>
                     </button>
                 </form>
-
-                
-
             </div>
 
 
             <div class="row">
                 <h3 class="center-align">Visit Me</h3>
-                <div class="col s12 m6 l4">
+                <div class="col s11 m4 l4">
                     <div class="card-panel z-depth-1">
                         <div class="row valign-wrapper">
-                            <div class="col s2 m5 l5">
+                            <div class="col s4 m5 l5">
                                 <img src="assets/images/githublogo.png" alt="github logo" class="responsive-img circle">
                             </div>
-                            <div class="col s10 m7 l7">
+                            <div class="col s8 m7 l7">
                                 <span class="black-text">
-                                    <a href="https://github.com/cetges86">Visit my Github Profile</a>
+                                    <a class="contact-links" href="https://github.com/cetges86">Visit my Github Profile</a>
                                 </span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6 l4">
+                <div class="col s11 m4 l4">
                     <div class="card-panel z-depth-1">
                         <div class="row valign-wrapper">
-                            <div class="col s2 m5 l5">
+                            <div class="col s4 m5 l5">
                                 <img src="assets/images/linkedinlogo.png" alt="linkedin logo" class="responsive-img circle">
                             </div>
-                            <div class="col s10 m7 l7">
+                            <div class="col s8 m7 l7">
                                 <span class="black-text">
-                                    <a href="https://www.linkedin.com/in/chrisetges">Visit my LinkedIn Profile</a>
+                                    <a class="contact-links" href="https://www.linkedin.com/in/chrisetges">Visit my LinkedIn Profile</a>
                                 </span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6 l4">
+                <div class="col s11 m4 l4">
                         <div class="card-panel z-depth-1">
                             <div class="row valign-wrapper">
-                                <div class="col s2 m5 l5">
+                                <div class="col s4 m5 l5">
                                     <img src="assets/images/facebook.png" alt="facebook logo" class="responsive-img circle">
                                 </div>
-                                <div class="col s10 m7 l7">
+                                <div class="col s8 m7 l7">
                                     <span class="black-text">
-                                        <a href="https://www.facebook.com/cetges">Follow Me on Facebook!</a>
+                                        <a class="contact-links" href="https://www.facebook.com/cetges">Follow Me on Facebook!</a>
                                     </span>
                                 </div>
                             </div>
