--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,8 @@
         <div class="container">
             <h3 class="center-align">Portfolio Projects</h3>
             <hr>
-            <div class="row valign-wrapper">
+            <div class="row">
+
                 <div id="proj1" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator z-depth-5" src="assets/images/niteowl.png">
@@ -84,37 +85,71 @@
                         <a href="https://github.com/cetges86/NiteOwl-Night-Planner">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj2" class="card animated col s10 m5 l5 offset-l2">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator z-depth-5" src="assets/images/fallchrissq.jpg">
+
+                <div id="proj2" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/friend-finder.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Friend Finder App (Full Stack)</span>
+                            <i class="material-icons right">more_vert</i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="https://secure-chamber-17235.herokuapp.com/">Link (Heroku)</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Friend Finder Full Stack App
+                                <i class="material-icons right">close</i>
+                            </span>
+                            <p>
+                                <br>
+                            </p>
+                            <ul>
+                                <span id="heading">Technologies Used:</span>
+                                <li>Materialize</li>
+                                <li>Express.js Server</li>
+                                <li>Javascript</li>
+                                <li>node.js</li>
+                                <li>npm packages: express, body-parser, path</li>
+                            </ul>
+                            <a href="https://github.com/cetges86/friend-finder-app">Github Repo</a>
+                        </div>
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Christopher Etges Photography</span>
-                        <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p>
-                            <a target="_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
-                        </p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Christopher Etges Photography
-                            <i class="material-icons right">close</i>
-                        </span>
-                        <p>Webpage built for my photography hobby.
-                            <br>
-                        </p>
-                        <ul>
-                            <span id="heading">Technologies Used:</span>
-                            <li>Bootstrap</li>
-                            <li>Javascript/jQuery</li>
-                            <li>Built using a Bootstrap template provided by freehtml6.co</li>
-                        </ul>
-                        <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row valign-wrapper">
-                <div id="proj3" class="card animated col s10 m5 l5">
+
+                    <div id="proj3" class="card animated col s10 m5 l5">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator z-depth-5" src="assets/images/fallchrissq.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Chris Etges Photography</span>
+                                <i class="material-icons right">more_vert</i>
+                                </span>
+                                <p>
+                                    <a target="_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
+                                </p>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">Christopher Etges Photography
+                                    <i class="material-icons right">close</i>
+                                </span>
+                                <p>Webpage built for my photography hobby.
+                                    <br>
+                                </p>
+                                <ul>
+                                    <span id="heading">Technologies Used:</span>
+                                    <li>Bootstrap</li>
+                                    <li>Javascript/jQuery</li>
+                                    <li>Built using a Bootstrap template provided by freehtml6.co</li>
+                                </ul>
+                                <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
+                            </div>
+                        </div>
+
+
+
+
+                <div id="proj4" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/trukeepicon.jpeg">
                     </div>
@@ -144,12 +179,12 @@
                         <a href="">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj4" class="card animated col s10 m5 l5 offset-l2">
+                <div id="proj5" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/anatomy.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Anatomy Trivia</span>
+                        <span class="card-title activator grey-text text-darken-4">Anatomy Trivia Game</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
@@ -172,9 +207,9 @@
                         <a href="https://github.com/cetges86/TriviaGame">Github Repo</a>
                     </div>
                 </div>
-            </div>
-            <div class="row valign-wrapper">
-                <div id="proj5" class="card animated col s10 m5 l5">
+
+
+                <div id="proj6" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/hangman.png">
                     </div>
@@ -190,7 +225,7 @@
                         <span class="card-title grey-text text-darken-4">Video Game Hangman
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Interactive Hangman Game 
+                        <p>Interactive Hangman Game
                             <br>
                         </p>
                         <ul>
@@ -203,7 +238,7 @@
                         <a href="https://github.com/cetges86/Hangman-Game">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj6" class="card animated col s10 m5 l5 offset-l2">
+                <div id="proj7" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/cat.gif">
                     </div>
@@ -232,37 +267,9 @@
                         <a href="https://github.com/cetges86/Gif-Search">Github Repo</a>
                     </div>
                 </div>
-            </div>
-            <div class="row valign-wrapper">
-                <div id="proj7" class="card animated col s10 m5 l5">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/node.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">LIRI Bot Node Application</span>
-                        <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p>
-                            <a target="_blank" href="https://github.com/cetges86/liri-node-app">Repo Link</a>
-                        </p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">LIRI Node Application
-                            <i class="material-icons right">close</i>
-                        </span>
-                        <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information 
-                            <br>
-                        </p>
-                        <ul>
-                            <span id="heading">Technologies Used:</span>
-                            <li>Javascript</li>
-                            <li>node.js</li>
-                            <li>npm packages: inquirer, dotenv, twitter, spotify-node-api, request</li>
-                        </ul>
-                        <a href="https://github.com/cetges86/liri-node-app">Github Repo</a>
-                    </div>
-                </div>
-                <div id="proj8" class="card animated col s10 m5 l5 offset-l2">
+
+                
+                <div id="proj8" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/train.jpg">
                     </div>
@@ -291,70 +298,69 @@
                         <a href="https://github.com/cetges86/Train-Schedule">Github Repo</a>
                     </div>
                 </div>
-            </div>
-            <div class="row valign-wrapper">
-                    <div id="proj9" class="card animated col s10 m5 l5">
+
+                <div id="proj9" class="card animated col s10 m5 l5">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/friend-finder.png">
+                            <img class="activator" src="assets/images/node.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Friend Finder Application (Full Stack)</span>
+                            <span class="card-title activator grey-text text-darken-4">LIRI Bot Node App</span>
                             <i class="material-icons right">more_vert</i>
                             </span>
                             <p>
-                                <a target="_blank" href="https://secure-chamber-17235.herokuapp.com/">Link (Heroku)</a>
+                                <a target="_blank" href="https://github.com/cetges86/liri-node-app">Repo Link</a>
                             </p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Friend Finder Full Stack App
+                            <span class="card-title grey-text text-darken-4">LIRI Node Application
                                 <i class="material-icons right">close</i>
                             </span>
-                            <p> 
+                            <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information
                                 <br>
                             </p>
                             <ul>
                                 <span id="heading">Technologies Used:</span>
-                                <li>Materialize</li>
-                                <li>Express.js Server</li>
                                 <li>Javascript</li>
                                 <li>node.js</li>
-                                <li>npm packages: express, body-parser, path</li>
+                                <li>npm packages: inquirer, dotenv, twitter, spotify-node-api, request</li>
                             </ul>
-                            <a href="https://github.com/cetges86/friend-finder-app">Github Repo</a>
+                            <a href="https://github.com/cetges86/liri-node-app">Github Repo</a>
                         </div>
                     </div>
-                    <div id="proj10" class="card animated col s10 m5 l5 offset-l2">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/burger.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Burger MySQL Application</span>
-                            <i class="material-icons right">more_vert</i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://radiant-sea-18751.herokuapp.com/">Link (Heroku)</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Burger SQL App
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Express Server with JawsDB mySQL database
-                                <br>
-                            </p>
-                            <ul>
-                                <span id="heading">Technologies Used:</span>
-                                <li>Javascript</li>
-                                <li>Express.js</li>
-                                <li>Handlebars</li>
-                                <li>mySQL</li>
-                                <li>Bootstrap</li>
-                                <li>HTML/CSS</li>
-                            </ul>
-                            <a href="https://github.com/cetges86/burger">Github Repo</a>
-                        </div>
+
+                <div id="proj10" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/burger.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Burger MySQL Application</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://radiant-sea-18751.herokuapp.com/">Link (Heroku)</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Burger SQL App
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Express Server with JawsDB mySQL database
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Javascript</li>
+                            <li>Express.js</li>
+                            <li>Handlebars</li>
+                            <li>mySQL</li>
+                            <li>Bootstrap</li>
+                            <li>HTML/CSS</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/burger">Github Repo</a>
                     </div>
                 </div>
+            </div>
+        
         </div>
 
     </main>
