--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="assets/js/materialize.min.js"></script>
-    <script src="assets/js/waypoints/lib/jquery.waypoints.js"></script>
+    <script src="assets/js/jquery.waypoints.js"></script>
     <script src="assets/js/script.js"></script>
 
 
