--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="portfolio.html">Portfolio</a>
                         </li>
                     </ul>
                 </div>
