add go food yourself

--- a/portfolio.html
+++ b/portfolio.html
@@ -359,6 +359,37 @@
                         <a href="https://github.com/cetges86/burger">Github Repo</a>
                     </div>
                 </div>
+                <div id="proj11" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/food.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Go Food Yourself</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://go-food-yourself.herokuapp.com/">Link (Heroku)</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Go Food Yourself
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Searches database for ingredient and displays recipe ideas via Sequelize database
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML/CSS</li>
+                            <li>Javascript/jQuery</li>
+                            <li>Express.js</li>
+                            <li>Materialize</li>
+                            <li>mySQL &amp; Sequelize</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/go-food-yourself">Github Repo</a>
+                    </div>
+                </div>
+
             </div>
         
         </div>
