--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,7 @@
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="https://www.trukeep.com">Link</a>
+                            <a target="_blank" href="http://www.trukeep.com">Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
@@ -387,6 +387,36 @@
                             <li>mySQL &amp; Sequelize</li>
                         </ul>
                         <a href="https://github.com/cetges86/go-food-yourself">Github Repo</a>
+                    </div>
+                </div>
+                <div id="proj12" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="https://dummyimage.com/300x300/31a894/fff.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Upcoming Project</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Upcoming Project
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <!-- <li>HTML/CSS</li>
+                            <li>Javascript/jQuery</li>
+                            <li>Express.js</li>
+                            <li>Materialize</li>
+                            <li>mySQL &amp; Sequelize</li> -->
+                        </ul>
+                        <a href="https://github.com/cetges86/">Github Repo</a>
                     </div>
                 </div>
 
