added video game scraper

--- a/portfolio.html
+++ b/portfolio.html
@@ -391,32 +391,34 @@
                 </div>
                 <div id="proj12" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="https://dummyimage.com/300x300/31a894/fff.png">
+                        <img class="activator" src="assets/images/videogames.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Upcoming Project</span>
+                        <span class="card-title activator grey-text text-darken-4">Article Scraper</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="">Link</a>
+                            <a target="_blank" href="https://obscure-ridge-73729.herokuapp.com/">Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Upcoming Project
+                        <p>Video Game Article Scraper
                             <br>
                         </p>
                         <ul>
                             <span id="heading">Technologies Used:</span>
-                            <!-- <li>HTML/CSS</li>
+                            <li>HTML/CSS</li>
                             <li>Javascript/jQuery</li>
                             <li>Express.js</li>
-                            <li>Materialize</li>
-                            <li>mySQL &amp; Sequelize</li> -->
+                            <li>Bootstrap 4.0</li>
+                            <li>Handlebars</li>
+                            <li>node.js</li>
+                            <li>mongoDB &amp; Mongoose</li>
                         </ul>
-                        <a href="https://github.com/cetges86/">Github Repo</a>
+                        <a href="https://github.com/cetges86/vidja-game-scraper">Github Repo</a>
                     </div>
                 </div>
 
